# lab-tradestrats

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/strategies/: README.md  adx_trend_strength.md  bollinger_band.md  box_theory.md  btc_dominanz.md  candlestick_patterns.md  ema_ribbon.md  exchange_inflow_outflow.md  fear_and_greed.md  funding_rate.md  higher_highs_lower_lows.md  ichimoku_cloud.md  korrelations_trading.md  macd_crossover.md  ml_feature_ensemble.md  multi_timeframe_rsi.md  news_sentiment_nlp.md  obv_divergenz.md  range_breakout_squeeze.md  rsi_mean_reversion.md  session_based_trading.md  sma_cross.md  social_sentiment.md  stochastic_rsi.md  support_resistance_breakout.md  volume_spike_breakout.md  vwap_reversion.md
notebooks/: 01_getting_started.ipynb  02_rsi_strategy.ipynb
src/tradestrats/: __init__.py  cli.py  config.py  dashboard.py
src/tradestrats/backtesting/: engine.py
src/tradestrats/data/: fetcher.py
src/tradestrats/indicators/: registry.py
src/tradestrats/strategies/: base.py  bollinger_band.py  box_theory.py  rsi_mean_reversion.py  sma_cross.py
src/tradestrats/visualization/: charts.py
tests/: test_bollinger_band.py  test_box_theory.py  test_data_fetcher.py  test_rsi_strategy.py
