[project]
name = "tradestrats"
version = "0.1.0"
description = "Trading strategy analysis and backtesting framework for crypto markets"
readme = "README.md"
authors = [
    { name = "Chris", email = "hello@chrismetz.xyz" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "ccxt>=4.0",
    "vectorbt>=0.26",
    "pandas-ta>=0.3",
    "plotly>=5.18",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30"]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
